trying to fix title animation jump

--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -42,6 +42,7 @@ body {
   margin: 0;
   z-index: 2;
 
+  animation-fill-mode: forwards;
   animation: title-fade 2s;
   @at-root {
     @keyframes title-fade {
